Curve build modifier #35026

Closed
opened 2013-04-19 17:47:03 +02:00 by Trygve Wastvedt · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 64 bit, NVIDIA Quadro 1000M

- Blender version with error, and version that worked ---

error - 2.66.1
worked - 2.57

- Short description of error ---

A build modifier on a bezier or NURBS curve, or a path, builds in an unpredictable, apparently random order. On a mesh it uses the vertex order, as expected. Checking "random" changes the order to a different random sequence. In 2.57 it built sequentially from the start of the curve/path.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Add bezier curve
  2. Add build modifier to curve
  3. Scrub through animation

%%%

%%%--- Operating System, Graphics card --- Windows 7 64 bit, NVIDIA Quadro 1000M - Blender version with error, and version that worked --- error - 2.66.1 worked - 2.57 - Short description of error --- A build modifier on a bezier or NURBS curve, or a path, builds in an unpredictable, apparently random order. On a mesh it uses the vertex order, as expected. Checking "random" changes the order to a different random sequence. In 2.57 it built sequentially from the start of the curve/path. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Add bezier curve 2. Add build modifier to curve 3. Scrub through animation %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%It's not as much a bug than a limitation of constructive modifiers applying on a curve. The thing is -- edges are mainly automatically generated in this case and their order is not so much determinate.

Campbell, could you think of cheap way preserving order of existing edges in CDDM_calc_edges/BKE_mesh_calc_edges? If not would suggest calling this is known limitation of constructive modifiers on curves.%%%

%%%It's not as much a bug than a limitation of constructive modifiers applying on a curve. The thing is -- edges are mainly automatically generated in this case and their order is not so much determinate. Campbell, could you think of cheap way preserving order of existing edges in CDDM_calc_edges/BKE_mesh_calc_edges? If not would suggest calling this is known limitation of constructive modifiers on curves.%%%

%%%fixed r56204,56205.
With no polygons it doesn't recalc edges at all, with some polygons, it extends the existing edge array but keeping them in order.%%%

%%%fixed r56204,56205. With no polygons it doesn't recalc edges at all, with some polygons, it extends the existing edge array but keeping them in order.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35026
No description provided.