fix [#35026] Curve build modifier