source/blender/blenkernel/BKE_mesh.h
@@ -36,6 +36,7 @@
 struct ID;
 struct BoundBox;
 struct DispList;
+struct EdgeHash;
 struct ListBase;
 struct BMEditMesh;
 struct BMesh;
@@ -340,6 +341,7 @@ void BKE_mesh_loops_to_mface_corners(struct CustomData *fdata, struct CustomData
                                      const int polyindex, const int mf_len,
                                      const int numTex, const int numCol, const int hasPCol, const int hasOrigSpace);
 
+void BKE_mesh_poly_edgehash_insert(struct EdgeHash *ehash, const struct MPoly *mp, const struct MLoop *mloop);
 void BKE_mesh_poly_calc_angles(struct MVert *mvert, struct MLoop *mloop,
                                struct MPoly *mp, float angles[]);
 
